--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "node-cron": "^3.0.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.1",
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": "18.x"
