--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skyblock-auction-backend",
+  "name": "sb-auction-api",
   "version": "1.0.0",
   "description": "Hypixel SkyBlock Auction Tracker Backend",
   "main": "server.js",
@@ -7,12 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.21.2",
-    "mongoose": "^8.10.1",
-    "node-cron": "^3.0.3"
+    "express": "^4.18.2",
+    "axios": "^1.6.7",
+    "mongoose": "^7.6.3",
+    "node-cron": "^3.0.3",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "18.x"
