--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
     "mongoose": "^7.6.3",
-    "node-cron": "^3.0.3",
-    "cors": "^2.8.5"
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": "18.x"
